--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+:root {
+  --black: #000;
+  --grey: #ddd;
+  --dark-grey: #717171;
+  --white: #fff;
+  --red-theme: #FF385C;
+  --light-grey: #f7f7f7;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
